pre and post hook done